[workspace]
members = [
  "packages/ffmpeg-sys-next",
  "packages/pipeline",
  "packages/sdk",
  "packages/sdk-builder",
]
resolver = "2"

[workspace.dependencies]
ffmpeg-pipeline = { path = "packages/pipeline" }
ffmpeg-pipeline-sdk = { path = "packages/sdk", default-features = false }
ffmpeg-sdk-builder = { path = "packages/sdk-builder", default-features = false }
image = { version = "0.25", default-features = false }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
ffmpeg-sys-next = { path = "packages/ffmpeg-sys-next" }

[profile.dev]
opt-level = 1

[profile.release]
lto = true
panic = "abort"
# opt-level = "z"
codegen-units = 1
incremental = false
debug = true
